--- a/exercise7/yii/basic/web/css/site.css
+++ b/exercise7/yii/basic/web/css/site.css
@@ -1,7 +1,27 @@
-html,
 body {
-    height: 100%;
+   
+background-image: url('http://localhost/yii/web/uploads/lastpic.jpg');
+font-family:"Comic Sans MS", monospace;
+ border:dashed;
+ background-size:cover;
 }
+div.container {
+    width: 100%;
+    border: 1px solid black;
+	color: white;
+	text-align: center;
+	clear: center;
+	font-size:large;
+}
+footer {
+	padding: 0.3em;
+    color: white;
+    background-img: lastpic.jpg;
+    clear: left;
+    text-align: center;
+    font-family: french script mt;
+	font-size: 150%;
+ }
 
 .wrap {
     min-height: 100%;
@@ -12,13 +32,6 @@ body {
 
 .wrap > .container {
     padding: 70px 15px 20px;
-}
-
-.footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
 }
 
 .jumbotron {
@@ -112,4 +125,26 @@ a.desc:after {
 
 .nav > li > form > button.logout:focus {
     outline: none;
+}
+table a
+{
+ text-decoration:none;
+ color:hotpink;
+}
+table,td,th
+{
+ border-collapse:collapse;
+ border:solid #d0d0d0 1px;
+ padding:20px;
+color:hotpink;
+}
+table td input
+{
+ width:97%;
+ height:35px;
+ border:dashed #00a2d1 1px;
+ padding-left:15px;
+ font-family:Verdana, Geneva, sans-serif;
+ box-shadow:0px 0px 0px rgba(1,0,0,0.2);
+ outline:none;
 }
