--- a/exercise7/yii/basic/web/css/site.css
+++ b/exercise7/yii/basic/web/css/site.css
@@ -13,6 +13,14 @@ div.container {
 	clear: center;
 	font-size:large;
 }
+div.container1 {
+    width: 100%;
+    border: 1px solid black;
+	color: hotpink;
+	text-align: center;
+	clear: center;
+	font-size:large;
+}
 footer {
 	padding: 0.3em;
     color: white;
